forget about cli

--- a/notebooks/walkthrough.ipynb
+++ b/notebooks/walkthrough.ipynb
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "09455773",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../src/address_deduplication')"
+    "sys.path.append('../src/addressmatch')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "947ee36f",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,9 @@
     "    deterministic_row_id\n",
     ")\n",
     "from deduplication import (\n",
-    "    get_cosine_similarity\n",
+    "    get_cosine_similarity,\n",
+    "    add_edges,\n",
+    "    remove_edges,\n",
     ")"
    ]
   },
@@ -56,6 +58,7 @@
     "DATA_FOLDER = '../data'\n",
     "INPUT_FOLDER = f'{DATA_FOLDER}/input'\n",
     "NORMALISED_FOLDER = f'{DATA_FOLDER}/normalised'\n",
+    "MANUAL_OVERRIDES_FOLDER = f'{DATA_FOLDER}/manual'\n",
     "OUTPUT_FOLDER = f'{DATA_FOLDER}/output'"
    ]
   },
@@ -86,13 +89,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# add a unique identifier for each restaurant\n",
     "restaurants['id'] = restaurants.apply(deterministic_row_id, axis=1)\n",
     "\n",
     "# make sure the id in the first column\n",
-    "restaurants.insert(0, 'id', restaurants.pop('id'))\n",
-    "\n"
+    "restaurants.insert(0, 'id', restaurants.pop('id'))"
    ]
   },
   {
@@ -271,8 +272,6 @@
    "outputs": [],
    "source": [
     "# draw the graph -- just for visualisation (with more than a few nodes it's an illegible hairball)\n",
-    "\n",
-    "\n",
     "plt.figure(figsize=(8, 8))\n",
     "pos = nx.spring_layout(G)  \n",
     "nx.draw_networkx_nodes(G, pos, node_size=500)\n",
@@ -289,26 +288,17 @@
    "source": [
     "## Manual changes\n",
     "\n",
-    "The easiest way to link two restarurants that aren't being matched is to add an edge at this point. We can also remove edges if things are being matched that shouldn't be."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4ae58d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make sure these nodes are connected\n",
-    "node_a = 'e97ca3f4e4ee26f55b4f1e9e58ca0182'\n",
-    "node_b = '2d29b645a21b5a5d9e1809e8c2e48274'\n",
-    "node_c = 'b6413c2b889bf7f4df0255df4dddfb43'\n",
-    "node_d = 'b4941ace111cbd25bc01342bfbbb1103'\n",
+    "The easiest way to link two restarurants that aren't being matched is to add an edge at this point. We can also remove edges if things are being matched that shouldn't be.\n",
     "\n",
-    "# add an edge between the two nodes if they are not already connected\n",
-    "G.add_edge(node_a, node_b)\n",
-    "G.add_edge(node_b, node_c)\n",
-    "G.add_edge(node_c, node_d)"
+    "The manual cases are in a file `do_match.csv` which looks like this:\n",
+    "```\n",
+    "id1,id2\n",
+    "e97ca3f4e4ee26f55b4f1e9e58ca0182,2d29b645a21b5a5d9e1809e8c2e48274\n",
+    "e97ca3f4e4ee26f55b4f1e9e58ca0182,b6413c2b889bf7f4df0255df4dddfb43\n",
+    "e97ca3f4e4ee26f55b4f1e9e58ca0182,b4941ace111cbd25bc01342bfbbb1103\n",
+    "```\n",
+    "\n",
+    "There is also a `do_non_match.csv` file which works in a similar way."
    ]
   },
   {
@@ -318,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO wrap in a function that takes tuples of node IDs"
+    "G = add_edges(G, f\"{MANUAL_OVERRIDES_FOLDER}/do_match.csv\")"
    ]
   },
   {
@@ -385,26 +375,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "426a900d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO wrap in a function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36dbbf97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO main.py that runs the whole process from the command line"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "77c393ae",
    "metadata": {},
@@ -423,22 +393,6 @@
     "    print(f'Group ID: {group_id}')\n",
     "    display(group_df[['id', 'name', 'address', 'postcode']])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75ef0538",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99cf4e01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
